# fastapi_kolak

./: .env  main.py  pyproject.toml
app/: __init__.py
app/core/: config.py  make_admin.py
app/crud/: employee.py  stock.py  use_item.py  user_auth.py
app/db/: index.py
app/dependencies/: admin.py  employee.py  stock.py  user_auth.py
app/middleware/: __init__.py
app/models/: __init__.py  model.py  user.py
app/router/: employee.py  stock.py  use_item.py  user_auth.py
app/schemas/: daily_work.py  employee.py  stock.py  use_item.py  user_auth.py
app/service/: employee.py  stock.py  user_auth.py
app/util/: user_auth.py
migrations/: env.py
migrations/versions/: 4674682f0258_first_alembic_version.py  a42a831f8a84_remove_is_verify.py
